--- a/css/reset.css
+++ b/css/reset.css
@@ -1,8 +1,8 @@
 *, *::before, *::after { box-sizing: border-box; margin: 0; padding: 0; }
 
-html { scroll-behavior: smooth; -webkit-text-size-adjust: 100%; }
+html { scroll-behavior: smooth; -webkit-text-size-adjust: 100%; overflow-x: hidden; }
 
-body { min-height: 100vh; line-height: 1.5; -webkit-font-smoothing: antialiased; }
+body { min-height: 100vh; line-height: 1.5; -webkit-font-smoothing: antialiased; overflow-x: hidden; }
 
 img, picture, video, canvas, svg { display: block; max-width: 100%; }
 
